--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
         <activity
             android:name=".Menu"
             android:label="@string/title_activity_menu"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".fecha_actual"
+            android:label="@string/title_activity_fecha_actual"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
