--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:label="@string/title_activity_menu"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".fecha_actual"
+            android:name=".Fecha_Actual"
             android:label="@string/title_activity_fecha_actual"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
